--- a/src/kb-code/3.md
+++ b/src/kb-code/3.md
@@ -175,3 +175,32 @@ This keeps `business-module` free of web concerns and concentrates UI logic here
 * **Deploy** only UI or service modules as Boot apps.
 * **Scan** library packages from each Boot entry point.
 * **When stuck**, reason about module ownership, move code back, and schedule its relocation in a later phase.
+
+---
+
+## H. Persistence Configuration
+
+If your data layer (entities, repositories, producers) now lives in its library module, you must provide JPA configuration there by moving or creating the `persistence.xml` alongside those classes. Otherwise, the container won’t discover your entities.
+
+**Steps:**
+
+1. **In your data or business module** (where entities reside):
+
+   ```bash
+   mkdir -p business-module/src/main/resources/META-INF
+   mv ../kitchensink/src/main/resources/META-INF/persistence.xml \
+      business-module/src/main/resources/META-INF/
+   ```
+
+2. **Verify** `persistence.xml` points to your datasource:
+
+   ```xml
+   <persistence-unit name="primary" transaction-type="JTA">
+     <jta-data-source>java:/jdbc/YourDataSource</jta-data-source>
+     <!-- Entities are auto-scanned in this JAR -->
+   </persistence-unit>
+   ```
+
+3. **Remove** any `persistence.xml` from the WAR or other modules to avoid conflicts.
+
+4. **Rebuild & deploy**: WildFly/EAP will load entities from the business JAR’s `META-INF/persistence.xml`, ensuring your repositories and producers work without “Not an entity” errors.
